--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "npx chromatic --project-token=chpt_6f4cf7775b8081f"
+    "chromatic": "chromatic --exit-zero-on-changes"
   },
   "dependencies": {
     "@fontsource/noto-sans-kr": "^5.0.19",
