--- a/package.json
+++ b/package.json
@@ -1,8 +1,25 @@
 {
-  "name": "design-system",
-  "private": true,
-  "version": "0.0.0",
+  "name": "jaehyeon-storybook",
+  "description": "Storybook pratice",
+  "private": false,
+  "version": "1.0.0",
   "type": "module",
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
+  "files": ["dist"],
+  "main": "dist/index.umd.js",
+  "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./styles": "./dist/index.css"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -23,13 +40,13 @@
     "@chromatic-com/storybook": "^1.6.1",
     "@storybook/addon-a11y": "^8.2.2",
     "@storybook/addon-essentials": "^8.2.1",
-    "@storybook/addon-interactions": "^8.2.1",
+    "@storybook/addon-interactions": "^8.2.2",
     "@storybook/addon-links": "^8.2.1",
     "@storybook/addon-onboarding": "^8.2.1",
     "@storybook/blocks": "^8.2.1",
     "@storybook/react": "^8.2.1",
     "@storybook/react-vite": "^8.2.1",
-    "@storybook/test": "^8.2.1",
+    "@storybook/test": "^8.2.2",
     "@storybook/test-runner": "^0.19.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -49,6 +66,8 @@
     "storybook": "^8.2.1",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "vite-plugin-dts": "^3.9.1",
+    "vite-plugin-static-copy": "^1.0.6"
   }
 }
